syntax = "proto3";

package airqualitymonitor;

option java_package = "generated.grpc.airquality";
option java_outer_classname = "AirQualityMonitorOuterClass";

service AirQualityMonitor {
    rpc MonitorAirQuality(stream AirQualityCheck) returns (stream AirQualityAlert); // Bi-directional Streaming
}

message AirQualityCheck {
    string location = 1;
}

message AirQualityAlert {
    string alertMessage = 1;
}

